# bitgateway

./: .gitignore  Cargo.toml  README.md  README_EN.md  clippy.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-plz.toml  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: autofix-ci.yml  ci.yml  node-ci.yml  release-plz.yml  release.yml  rust-ci.yml
crates/bitgateway/: CHANGELOG.md  Cargo.toml  Dioxus.toml
crates/bitgateway-client/: CHANGELOG.md  Cargo.toml
crates/bitgateway-client/src/: client.rs  config.rs  crypto.rs  lib.rs  models.rs  xencode.rs
crates/bitgateway/assets/: tailwind.css
crates/bitgateway/src/: app.rs  auth.rs  autostart.rs  main.rs  network.rs  state.rs  tray.rs  update.rs  utils.rs  windowing.rs
crates/bitgateway/src/components/: button.rs  footer.rs  mod.rs  page_title.rs  toast.rs  update_prompt.rs
crates/bitgateway/src/config/: credentials.rs  mod.rs  settings.rs
crates/bitgateway/src/views/: login.rs  mod.rs  settings.rs  status.rs
src/: App.vue  constants.ts  main.ts  state.ts  types.ts  utils.ts
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs
src/api/: index.ts  methods.ts  store.ts
src/logic/: auth.ts  init.ts  status.ts
src/views/: Login.vue  Status.vue
