[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.4"
authors = ["Ray <i@mk1.io>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/so1ve/bitgateway"

[workspace.dependencies]
anyhow = "1"
auto-launch = "0.6"
base64 = "0.22"
bon = "3.9"
bitgateway-client = { version = "0.1.4", path = "crates/bitgateway-client" }
directories = "6"
dioxus = { version = "0.7", features = ["desktop"] }
hmac = "0.12"
md-5 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
single-instance = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }

[workspace.lints.clippy]
all = "warn"
clone-on-ref-ptr = "warn"
default-trait-access = "warn"
enum-glob-use = "warn"
fn-params-excessive-bools = "warn"
format-collect = "warn"
format-push-string = "warn"
implicit-clone = "warn"
items-after-statements = "warn"
manual-let-else = "warn"
manual-string-new = "warn"
match-same-arms = "warn"
match-wildcard-for-single-variants = "warn"
missing-const-for-fn = "warn"
must-use-candidate = "warn"
needless-pass-by-value = "warn"
redundant-pub-crate = "warn"
semicolon-if-nothing-returned = "warn"
single-match-else = "warn"
struct-excessive-bools = "warn"
undocumented_unsafe_blocks = "warn"
uninlined-format-args = "warn"
unnecessary-literal-bound = "warn"
use-self = "warn"
verbose-file-reads = "warn"
wildcard-imports = "warn"

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
