[package]
name = "bitsgui"
description = "A simple login / logout desktop app for gateway (10.0.0.55) at BIT"
authors = ["Ray <i@mk1.io>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bitsgui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
bitsrun-lib = "0.3.0"
log = "0.4.28"
reqwest = { version = "0.12.24", features = [
	"json",
	"rustls-tls",
	"socks",
	"system-proxy",
], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", default-features = true, features = [
	"devtools",
	"tray-icon",
] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-prevent-default = "3"
tauri-plugin-store = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
