[package]
name = "bitgateway-client"
description = "A small srun client for BIT"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["bit", "srun"]
categories = ["api-bindings", "network-programming", "web-programming::http-client"]

[dependencies]
anyhow.workspace = true
base64.workspace = true
bon.workspace = true
hmac.workspace = true
md-5.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
tokio.workspace = true

[lints]
workspace = true
