[package]
name = "bitgateway"
description = "A desktop client for the BIT SRUN gateway"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["bit", "srun"]
categories = ["gui"]

[dependencies]
anyhow.workspace = true
auto-launch.workspace = true
bitgateway-client.workspace = true
directories.workspace = true
dioxus.workspace = true
serde.workspace = true
serde_json.workspace = true
single-instance.workspace = true
tokio.workspace = true

[lints]
workspace = true
